@@ -1,3 +1,9 @@
+2010-12-06  Mike Frysinger  <vapier@gentoo.org>
+
+	* Makefile.am (!INSTALL_LIBBFD/bfdinclude_HEADERS): Set to nothing.
+	(PLUGINS/bfdinclude_HEADERS): Append plugin-api.h.
+	* Makefile.in: Regenerated.
+
 2010-11-30  Joel Sherrill  <joel.sherrill@oarcorp.com>
 
 	* config.bfd: Add sparc64-rtems.
